--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,7 @@ li {
 .weather-app-wrapper {
     max-width: 650px;
     margin: 30px auto;
+    padding-top: 35px;
 }
 .weather-app {
     border: 1px solid #60bbcd;
@@ -52,10 +53,23 @@ li {
     font-weight: 400;
     line-height: 1;
 }
+.temperature strong {
+    font-size: 64px;
+    line-height: 1;
+    font-weight: 400;
+}
+
+.img{
+margin-right: 15px;
+height:55px;
+width: 55px;
+}
 
 .units {
     position: relative;
-    top: -34px;
+    top: -35px; 
+    /* bottom: 10px; */
+    font-size: 16px;
 }
 
 .search-form {
