--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@ p {
 a:link {
     text-decoration: none;
 }
-
+ 
 li {
     color: rgb(135, 135, 135);
     font-size: 16px;
@@ -67,6 +67,11 @@ li {
     font-size: 64px;
     line-height: 1;
     font-weight: 400;
+}
+
+.temperature .active {
+    color: rgb(33, 33, 33);
+
 }
 
 .img{
