--- a/src/styles.css
+++ b/src/styles.css
@@ -100,8 +100,20 @@ width: 55px;
     padding: 15px 0 15px 2px;
     width: 580px;
     max-width: 470px;
+    text-align: center;
+    color: black;
 }
 
+.weather-forecast-date {
+    font-size: 15px;
+}
+
+.weather-forecast-temperature-min {
+    opacity: 0.6;
+}
+.weather-forecast-temperatures{
+    font-size: 13px;
+}
 #description {
     text-transform: capitalize;
 }
